src/generated/JASS2Parser.ts
// Generated from src/JASS2.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import JASS2Listener from "./JASS2Listener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class JASS2Parser extends Parser {
	public static readonly RAWVAL = 1;
	public static readonly STRING = 2;
	public static readonly AND = 3;
	public static readonly ARRAY = 4;
	public static readonly CALL = 5;
	public static readonly CONSTANT = 6;
	public static readonly DEBUG = 7;
	public static readonly ELSE = 8;
	public static readonly ELSEIF = 9;
	public static readonly ENDFUNCTION = 10;
	public static readonly ENDIF = 11;
	public static readonly ENDLOOP = 12;
	public static readonly ENDGLOBALS = 13;
	public static readonly EXTENDS = 14;
	public static readonly EXITWHEN = 15;
	public static readonly FALSE = 16;
	public static readonly FUNCTION = 17;
	public static readonly GLOBALS = 18;
	public static readonly IF = 19;
	public static readonly LOCAL = 20;
	public static readonly LOOP = 21;
	public static readonly NATIVE = 22;
	public static readonly NOT = 23;
	public static readonly NOTHING = 24;
	public static readonly NULL = 25;
	public static readonly OR = 26;
	public static readonly RETURNS = 27;
	public static readonly RETURN = 28;
	public static readonly SET = 29;
	public static readonly TAKES = 30;
	public static readonly THEN = 31;
	public static readonly TRUE = 32;
	public static readonly TYPE = 33;
	public static readonly COMMA = 34;
	public static readonly EQ_EQ = 35;
	public static readonly EQ = 36;
	public static readonly NEQ = 37;
	public static readonly LT_EQ = 38;
	public static readonly LT = 39;
	public static readonly GT_EQ = 40;
	public static readonly GT = 41;
	public static readonly PLUS = 42;
	public static readonly MINUS = 43;
	public static readonly MUL = 44;
	public static readonly DIV = 45;
	public static readonly LPAREN = 46;
	public static readonly RPAREN = 47;
	public static readonly LBRACK = 48;
	public static readonly RBRACK = 49;
	public static readonly ID = 50;
	public static readonly INTVAL = 51;
	public static readonly HEXVAL = 52;
	public static readonly REALVAL = 53;
	public static readonly WS = 54;
	public static readonly NL = 55;
	public static readonly LINE_COMMENT = 56;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_root = 0;
	public static readonly RULE_typename = 1;
	public static readonly RULE_varname = 2;
	public static readonly RULE_type = 3;
	public static readonly RULE_extendsRule = 4;
	public static readonly RULE_globals = 5;
	public static readonly RULE_variable = 6;
	public static readonly RULE_param = 7;
	public static readonly RULE_takes = 8;
	public static readonly RULE_returnsRule = 9;
	public static readonly RULE_nativeRule = 10;
	public static readonly RULE_function = 11;
	public static readonly RULE_stmt = 12;
	public static readonly RULE_setBrack = 13;
	public static readonly RULE_elseif = 14;
	public static readonly RULE_elseRule = 15;
	public static readonly RULE_expr = 16;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, "'and'", 
                                                            "'array'", "'call'", 
                                                            "'constant'", 
                                                            "'debug'", "'else'", 
                                                            "'elseif'", 
                                                            "'endfunction'", 
                                                            "'endif'", "'endloop'", 
                                                            "'endglobals'", 
                                                            "'extends'", 
                                                            "'exitwhen'", 
                                                            "'false'", "'function'", 
                                                            "'globals'", 
                                                            "'if'", "'local'", 
                                                            "'loop'", "'native'", 
                                                            "'not'", "'nothing'", 
                                                            "'null'", "'or'", 
                                                            "'returns'", 
                                                            "'return'", 
                                                            "'set'", "'takes'", 
                                                            "'then'", "'true'", 
                                                            "'type'", "','", 
                                                            "'=='", "'='", 
                                                            "'!='", "'<='", 
                                                            "'<'", "'>='", 
                                                            "'>'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'('", 
                                                            "')'", "'['", 
                                                            "']'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "RAWVAL", 
                                                             "STRING", "AND", 
                                                             "ARRAY", "CALL", 
                                                             "CONSTANT", 
                                                             "DEBUG", "ELSE", 
                                                             "ELSEIF", "ENDFUNCTION", 
                                                             "ENDIF", "ENDLOOP", 
                                                             "ENDGLOBALS", 
                                                             "EXTENDS", 
                                                             "EXITWHEN", 
                                                             "FALSE", "FUNCTION", 
                                                             "GLOBALS", 
                                                             "IF", "LOCAL", 
                                                             "LOOP", "NATIVE", 
                                                             "NOT", "NOTHING", 
                                                             "NULL", "OR", 
                                                             "RETURNS", 
                                                             "RETURN", "SET", 
                                                             "TAKES", "THEN", 
                                                             "TRUE", "TYPE", 
                                                             "COMMA", "EQ_EQ", 
                                                             "EQ", "NEQ", 
                                                             "LT_EQ", "LT", 
                                                             "GT_EQ", "GT", 
                                                             "PLUS", "MINUS", 
                                                             "MUL", "DIV", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACK", "RBRACK", 
                                                             "ID", "INTVAL", 
                                                             "HEXVAL", "REALVAL", 
                                                             "WS", "NL", 
                                                             "LINE_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "typename", "varname", "type", "extendsRule", "globals", "variable", 
		"param", "takes", "returnsRule", "nativeRule", "function", "stmt", "setBrack", 
		"elseif", "elseRule", "expr",
	];
	public get grammarFileName(): string { return "JASS2.g4"; }
	public get literalNames(): (string | null)[] { return JASS2Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return JASS2Parser.symbolicNames; }
	public get ruleNames(): string[] { return JASS2Parser.ruleNames; }
	public get serializedATN(): number[] { return JASS2Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, JASS2Parser._ATN, JASS2Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let localctx: RootContext = new RootContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, JASS2Parser.RULE_root);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 6)) & ~0x1F) === 0 && ((1 << (_la - 6)) & 134289409) !== 0)) {
				{
				this.state = 38;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 34;
					this.type_();
					}
					break;
				case 2:
					{
					this.state = 35;
					this.nativeRule();
					}
					break;
				case 3:
					{
					this.state = 36;
					this.globals();
					}
					break;
				case 4:
					{
					this.state = 37;
					this.function_();
					}
					break;
				}
				}
				this.state = 42;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 43;
			this.match(JASS2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typename(): TypenameContext {
		let localctx: TypenameContext = new TypenameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, JASS2Parser.RULE_typename);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 45;
			this.match(JASS2Parser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varname(): VarnameContext {
		let localctx: VarnameContext = new VarnameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, JASS2Parser.RULE_varname);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 47;
			this.match(JASS2Parser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_(): TypeContext {
		let localctx: TypeContext = new TypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, JASS2Parser.RULE_type);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 49;
			this.match(JASS2Parser.TYPE);
			this.state = 50;
			this.match(JASS2Parser.ID);
			this.state = 51;
			this.extendsRule();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public extendsRule(): ExtendsRuleContext {
		let localctx: ExtendsRuleContext = new ExtendsRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, JASS2Parser.RULE_extendsRule);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 53;
			this.match(JASS2Parser.EXTENDS);
			this.state = 54;
			this.match(JASS2Parser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public globals(): GlobalsContext {
		let localctx: GlobalsContext = new GlobalsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, JASS2Parser.RULE_globals);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 56;
			this.match(JASS2Parser.GLOBALS);
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6 || _la===20 || _la===50) {
				{
				{
				this.state = 57;
				this.variable();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.match(JASS2Parser.ENDGLOBALS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variable(): VariableContext {
		let localctx: VariableContext = new VariableContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, JASS2Parser.RULE_variable);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 65;
				this.match(JASS2Parser.CONSTANT);
				}
			}

			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 68;
				this.match(JASS2Parser.LOCAL);
				}
			}

			this.state = 71;
			this.typename();
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 72;
				this.match(JASS2Parser.ARRAY);
				}
			}

			this.state = 75;
			this.varname();
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===36) {
				{
				this.state = 76;
				this.match(JASS2Parser.EQ);
				this.state = 77;
				this.expr(0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public param(): ParamContext {
		let localctx: ParamContext = new ParamContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, JASS2Parser.RULE_param);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 80;
			this.typename();
			this.state = 81;
			this.varname();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public takes(): TakesContext {
		let localctx: TakesContext = new TakesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, JASS2Parser.RULE_takes);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 83;
			this.match(JASS2Parser.TAKES);
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				{
				this.state = 84;
				this.match(JASS2Parser.NOTHING);
				}
				break;
			case 50:
				{
				{
				this.state = 85;
				this.param();
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===34) {
					{
					{
					this.state = 86;
					this.match(JASS2Parser.COMMA);
					this.state = 87;
					this.param();
					}
					}
					this.state = 92;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public returnsRule(): ReturnsRuleContext {
		let localctx: ReturnsRuleContext = new ReturnsRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, JASS2Parser.RULE_returnsRule);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(JASS2Parser.RETURNS);
			this.state = 96;
			_la = this._input.LA(1);
			if(!(_la===24 || _la===50)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nativeRule(): NativeRuleContext {
		let localctx: NativeRuleContext = new NativeRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, JASS2Parser.RULE_nativeRule);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 98;
				this.match(JASS2Parser.CONSTANT);
				}
			}

			this.state = 101;
			this.match(JASS2Parser.NATIVE);
			this.state = 102;
			this.match(JASS2Parser.ID);
			this.state = 103;
			this.takes();
			this.state = 104;
			this.returnsRule();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public function_(): FunctionContext {
		let localctx: FunctionContext = new FunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, JASS2Parser.RULE_function);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 106;
				this.match(JASS2Parser.CONSTANT);
				}
			}

			this.state = 109;
			this.match(JASS2Parser.FUNCTION);
			this.state = 110;
			this.match(JASS2Parser.ID);
			this.state = 111;
			this.takes();
			this.state = 112;
			this.returnsRule();
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6 || _la===20 || _la===50) {
				{
				{
				this.state = 113;
				this.variable();
				}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807960736) !== 0)) {
				{
				{
				this.state = 119;
				this.stmt();
				}
				}
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 125;
			this.match(JASS2Parser.ENDFUNCTION);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let localctx: StmtContext = new StmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, JASS2Parser.RULE_stmt);
		let _la: number;
		try {
			this.state = 185;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 29:
				localctx = new StmtSetContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 127;
				this.match(JASS2Parser.SET);
				this.state = 128;
				this.match(JASS2Parser.ID);
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===48) {
					{
					this.state = 129;
					this.setBrack();
					}
				}

				this.state = 132;
				this.match(JASS2Parser.EQ);
				this.state = 133;
				this.expr(0);
				}
				break;
			case 5:
			case 7:
				localctx = new StmtCallContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===7) {
					{
					this.state = 134;
					this.match(JASS2Parser.DEBUG);
					}
				}

				this.state = 137;
				this.match(JASS2Parser.CALL);
				this.state = 138;
				this.match(JASS2Parser.ID);
				this.state = 139;
				this.match(JASS2Parser.LPAREN);
				this.state = 148;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 42139654) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 3950593) !== 0)) {
					{
					this.state = 140;
					this.expr(0);
					this.state = 145;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===34) {
						{
						{
						this.state = 141;
						this.match(JASS2Parser.COMMA);
						this.state = 142;
						this.expr(0);
						}
						}
						this.state = 147;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 150;
				this.match(JASS2Parser.RPAREN);
				}
				break;
			case 28:
				localctx = new StmtReturnContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 151;
				this.match(JASS2Parser.RETURN);
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 42139654) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 3950593) !== 0)) {
					{
					this.state = 152;
					this.expr(0);
					}
				}

				}
				break;
			case 19:
				localctx = new StmtIfContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 155;
				this.match(JASS2Parser.IF);
				this.state = 156;
				this.expr(0);
				this.state = 157;
				this.match(JASS2Parser.THEN);
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807960736) !== 0)) {
					{
					{
					this.state = 158;
					this.stmt();
					}
					}
					this.state = 163;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===9) {
					{
					{
					this.state = 164;
					this.elseif();
					}
					}
					this.state = 169;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 171;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===8) {
					{
					this.state = 170;
					this.elseRule();
					}
				}

				this.state = 173;
				this.match(JASS2Parser.ENDIF);
				}
				break;
			case 21:
				localctx = new StmtLoopContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 175;
				this.match(JASS2Parser.LOOP);
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807960736) !== 0)) {
					{
					{
					this.state = 176;
					this.stmt();
					}
					}
					this.state = 181;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 182;
				this.match(JASS2Parser.ENDLOOP);
				}
				break;
			case 15:
				localctx = new StmtExitWhenContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 183;
				this.match(JASS2Parser.EXITWHEN);
				this.state = 184;
				this.expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public setBrack(): SetBrackContext {
		let localctx: SetBrackContext = new SetBrackContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, JASS2Parser.RULE_setBrack);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 187;
			this.match(JASS2Parser.LBRACK);
			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 42139654) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 3950593) !== 0)) {
				{
				this.state = 188;
				this.expr(0);
				}
			}

			this.state = 191;
			this.match(JASS2Parser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elseif(): ElseifContext {
		let localctx: ElseifContext = new ElseifContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, JASS2Parser.RULE_elseif);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 193;
			this.match(JASS2Parser.ELSEIF);
			this.state = 194;
			this.expr(0);
			this.state = 195;
			this.match(JASS2Parser.THEN);
			this.state = 199;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807960736) !== 0)) {
				{
				{
				this.state = 196;
				this.stmt();
				}
				}
				this.state = 201;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elseRule(): ElseRuleContext {
		let localctx: ElseRuleContext = new ElseRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, JASS2Parser.RULE_elseRule);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 202;
			this.match(JASS2Parser.ELSE);
			this.state = 206;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807960736) !== 0)) {
				{
				{
				this.state = 203;
				this.stmt();
				}
				}
				this.state = 208;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExprContext = new ExprContext(this, this._ctx, _parentState);
		let _prevctx: ExprContext = localctx;
		let _startState: number = 32;
		this.enterRecursionRule(localctx, 32, JASS2Parser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 243;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 29, this._ctx) ) {
			case 1:
				{
				localctx = new ExprParenContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
